# ignibyte_loop_engineering_basics

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  check.sh  package-lock.json  package.json  playwright.config.ts
.claude/: README.md  settings.json
.claude/commands/: gates.md  spec.md
.claude/hooks/: after-write.sh  gates.sh  record-doc-read.sh  require-docs-read.sh  session-start.sh  spec-done.sh
.claude/templates/: spec.md
.github/workflows/: ci.yml
docs/: architecture.md  index.md  log.md
docs/specs/: index.md  note-persistence.md  notes-ui.md
e2e/: notes.spec.ts
src/: lib.rs  main.rs  model.rs  routes.rs  state.rs
static/: index.html
tests/: api.rs
