[package]
name = "ignibyte_loop_engineering_basics"
version = "0.1.0"
edition = "2021"
description = "Demo web app for the Beginner Loop Engineering blog series"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
